# yabaitech_tokyo_vol_4

./: .gitignore  .gitmodules  README.md  Satyristes  book-class.satyh  install-fonts.sh  main.saty  postscript.satyh  yabai2020s.opam
.github/workflows/: build.yml
MasWag/: Makefile  article.org  article.satyh  article.template.satyh
MasWag/figs/: flowchart.dot
articles/MasWag/: Makefile  article.org  article.satyh  article.template.satyh
articles/censored/: article.satyh
articles/gfn/: article.satyh
articles/irnbru/: alerts.satyh  article.satyh  dialog.satyh
articles/mh/: article.satyh  bib.satyh  draft.txt  intro.satyh  main.satyh  memo.txt
articles/pohe/: article.satyh
articles/wasabiz/: article.satyh  pseudo-chapter.satyh
censored/: article.satyh
class/: bibliography.satyh  chapterish.satyh  colophon.satyh  cross-ref.satyh  document.satyh  figure.satyh  font-config.satyh  footnote.satyh  label.satyh  misc-commands.satyh  mutables.satyh  table-of-contents.satyh  theoremish.satyh  title.satyh  yabaitech.satyh
class/__test__/: bibliography.satyh  chapter.satyh  figure.satyh  footnote.satyh  misc-commands.satyh  regression.test.js  test.saty  theorem.satyh
class/lib/: bibliography.satyg  cross-ref.satyg
class/pages/: colophon.satyh  table-of-contents.satyh  title.satyh
class/typeset/: bibliography-section.satyh  chapter.satyh  chapterish.satyh  cite.satyh  figure.satyh  misc-commands.satyh  page-footer.satyh  (+3 more)
gfn/: article.satyh
irnbru/: article.satyh
lib/: lib.satyh
mh/: article.satyh
pohe/: article.satyh
wasabiz/: article.satyh
(+4 files in other folders)
